[gd_scene load_steps=2 format=3 uid="uid://bqbp1t23gwks5"]

[ext_resource type="Script" uid="uid://bjbiydapxmxb4" path="res://scripts/TimeSlotCell.gd" id="1_8bhyl"]

[node name="TimeSlotCell" type="PanelContainer" node_paths=PackedStringArray("content_label", "instructor_name_label")]
custom_minimum_size = Vector2(0, 50)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_8bhyl")
content_label = NodePath("ContentLabel")
instructor_name_label = NodePath("InstructorNameLabel")

[node name="ContentLabel" type="Label" parent="."]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
clip_text = true

[node name="UnscheduleButton" type="Button" parent="."]
visible = false
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "X"

[node name="InstructorNameLabel" type="Label" parent="."]
layout_mode = 2
